<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background">

    <ImageView
            android:layout_width="64dp"
            android:layout_height="45dp" app:srcCompat="@drawable/p2"
            android:id="@+id/imageView9"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toEndOf="@+id/imageView7"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="45dp" app:srcCompat="@drawable/p2"
            android:id="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="45dp" app:srcCompat="@drawable/p2"
            android:id="@+id/imageView7"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toEndOf="@+id/imageView5"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/cardview_light_background"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

    <ImageView
            android:layout_width="59dp"
            android:layout_height="56dp"
            android:src="@drawable/p1"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/rd"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/p2"
            android:id="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/go"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/p3"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/v"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/p4"
            android:id="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/bf"
            app:layout_constraintHorizontal_bias="0.581"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <TextView
            android:text="@string/rd"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="@dimen/textSize"
            android:gravity="center"/>
    <TextView
            android:text="@string/go"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:textSize="@dimen/textSize"
            android:gravity="center"/>
    <TextView
            android:text="@string/v"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textSize="@dimen/textSize"
            android:gravity="center"/>
    <TextView
            android:text="@string/bf"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            app:layout_constraintHorizontal_bias="0.21"/>
    <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/su"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="20dp"/>
    <TextView
            android:id="@+id/textView5"
            android:text="@string/ls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.895" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/recyclePro" app:layout_constraintVertical_bias="0.642"/>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclePro"
            android:layout_width="match_parent"
            android:layout_height="157dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/textView6">
    </android.support.v7.widget.RecyclerView>
    <TextView
            android:id="@+id/textView7"
            android:text="@string/mf"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/recyclePro"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="45dp" app:srcCompat="@drawable/p2"
            android:id="@+id/imageView5"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toEndOf="@+id/imageView8"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="64dp"
            android:layout_height="20dp"
            android:id="@+id/textView8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.635" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"/>


</android.support.constraint.ConstraintLayout>